[package]
name = "dnstap-utils"
version = "0.3.1"
description = "dnstap utilities"
authors = ["Fastly"]
keywords = ["dns", "dnstap"]
categories = ["command-line-utilities"]
edition = "2021"
repository = "https://github.com/fastly/dnstap-utils"
license = "Apache-2.0"
include = ["src/**/*", "LICENSE", "README.md", "dnstap.pb/dnstap.proto", "build.rs"]

[dependencies]
anyhow = "1.0.66"
async-channel = "1.7.1"
async-stream = "0.3.3"
bytes = "1.2.1"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.18", features = ["derive"] }
domain = "0.7.1"
extfmt = "0.1.1"
futures = "0.3.25"
futures-util = "0.3.25"
heck = "0.4.0"
hex = "0.4.3"
hyper = { version = "0.14.20", features = ["server", "stream", "http1", "tcp"] }
inotify = "0.10.0"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
lazy_static = "1.4.0"
libc = "0.2.137"
log = "0.4.17"
prometheus = "0.13.3"
prometheus-static-metric = "0.5.1"
prost = "0.11.0"
simple-error = "0.2.3"
stderrlog = "0.5.3"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec", "io"] }

[build-dependencies]
prost-build = "0.11.1"
