[package]
name = "dnstap-utils"
version = "0.5.0"
description = "dnstap utilities"
authors = ["Fastly"]
keywords = ["dns", "dnstap"]
categories = ["command-line-utilities"]
edition = "2021"
repository = "https://github.com/fastly/dnstap-utils"
license = "Apache-2.0"
include = ["src/**/*", "LICENSE", "README.md", "dnstap.pb/dnstap.proto", "build.rs"]

[dependencies]
anyhow = "1.0.79"
async-channel = "2.1.1"
async-stream = "0.3.5"
bytes = "1.5.0"
clap = { version = "4.4.16", features = ["derive"] }
domain = "0.9.3"
futures = "0.3.30"
futures-util = "0.3.30"
heck = "0.4.1"
hex = "0.4.3"
hyper = { version = "0.14.28", features = ["server", "stream", "http1", "tcp"] }
inotify = "0.10.2"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
lazy_static = "1.4.0"
libc = "0.2.152"
log = "0.4.20"
prometheus = "0.13.3"
prometheus-static-metric = "0.5.1"
prost = "0.12.3"
stderrlog = { version = "0.5.4", default-features = false }
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["formatting", "macros"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec", "io"] }

[build-dependencies]
prost-build = "0.12.3"
